Changes
=======

0.8 (2010-12-02)
----------------

Features
~~~~~~~~

- Added Polish locale data: thanks to Marcin Lulek.

Bug Fixes
~~~~~~~~~

- Fix dynamic sequence item adding on Chrome and Firefox 4.  Previously if
  there was a validation error rendering a set of sequence items, the "add
  more" link would be rendered outside the form, which would cause it to not
  work.  Wrapping the sequence item <li> element in a <ul> fixed this.

0.7 (2010-10-10)
----------------

Features
~~~~~~~~

- Added Danish locale.

- Added Spanish locale:  thanks to David Cerna for the translations!

- ``DatePartsWidget`` now renders error "Required" if all blank or
  "Incomplete" if partially blank for consistency with the other widgets.

- Different styling involving <li> and <ul> for checkbox choice,
  checked input, radio choice, checked password, and dateparts widgets
  (via Ergo^). See http://bugs.repoze.org/issue165.

Dependencies
~~~~~~~~~~~~

- Deform now depends on ``colander`` version 0.8 or better (the demo
  wants to use schema bindings).

- Deform now depends on ``Chameleon`` (uppercase) rather than
  ``chameleon`` to allow for non-PyPI servers.

Demo
~~~~

- New addition to the demonstration application: schema binding.

0.6 (2010-09-03)
----------------

Features
~~~~~~~~

- Sequence widgets are no longer ``structural`` by default; they now
  print the label of the sequence above the sequence adder.

- Radio buttons in a radio button choice widget are now spaced closer
  together and the button is on the left hand side.

- The sequence remove button is no longer an image.

- The sequence widget now puts the sequence adding link *after* any
  existing items in the sequence (previously the link was always
  beneath the sequence title).

- It is now possible to associate a widget with a schema node within
  the schema directly.  For example::

    import colander
    import deform.widget

    class MySchema(Schema):
        description = colander.SchemaNode(